--- a/Projeto StudyEasy/src/Materias/materias.css
+++ b/Projeto StudyEasy/src/Materias/materias.css
@@ -86,6 +86,51 @@ body {
 
 .content h1 {
     margin-bottom: 20px;
+    color: #007BFF;
+    font-size: 32px;
+}
+
+.content p {
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: #333;
+}
+
+.content h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    color: #007BFF;
+    border-bottom: 2px solid #007BFF;
+    padding-bottom: 5px;
+}
+
+.content ul {
+    list-style: disc inside;
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+
+.content ul li {
+    margin-bottom: 10px;
+}
+
+.content ul li a {
+    color: #000000;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.content ul li a:hover {
+    text-decoration: underline;
+}
+
+.section-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
 /* Media Queries */
@@ -138,5 +183,13 @@ body {
     
     .content h1 {
         font-size: 24px;
+    }
+
+    .content h2 {
+        font-size: 20px;
+    }
+
+    .content ul li a {
+        font-size: 16px;
     }
 }
