--- a/src/components/pageContent/PageContent.module.css
+++ b/src/components/pageContent/PageContent.module.css
@@ -2,3 +2,10 @@
   width: 100%;
   display: flex;
 }
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
