--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -10,12 +10,25 @@
 }
 
 .navigation {
+  height: calc(100vh - 3rem);
   position: sticky;
   top: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .sidebar h2 {
-  margin-bottom: 20px;
+  text-align: left;
+  margin: unset;
+}
+
+.sidebar nav {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .sidebar nav ul {
@@ -24,8 +37,8 @@
   width: 100%;
 }
 
-.sidebar nav ul li {
-  margin-bottom: 10px;
+.sidebar nav ul:last-child {
+  margin: unset;
 }
 
 .sidebar nav ul li a {
@@ -33,12 +46,13 @@
   text-decoration: none;
   font-size: 18px;
   display: block;
-  padding: 5px;
+  padding: 0.5rem;
 }
 
 .sidebar nav ul li a:hover,
 .sidebar nav ul li a.active {
   background-color: #0056b3;
+  border-radius: 0.5rem;
 }
 
 .sidebar nav ul .hidden {
@@ -52,6 +66,5 @@
 
 .sidebar nav ul .visible li a {
   background-color: #0056b3;
-  margin-bottom: 5px;
-  border-radius: 4px;
+  border-radius: 0.5rem;
 }
