--- a/src/features/feedback/Feedback.module.css
+++ b/src/features/feedback/Feedback.module.css
@@ -20,11 +20,11 @@
   border-bottom: 1px solid #ddd;
 }
 
-.header .user-info {
+.header .user_info {
   font-size: 16px;
 }
 
-.header .user-info span {
+.header .user_info span {
   font-weight: bold;
 }
 
@@ -71,8 +71,8 @@ button:hover {
   background-color: #0056b3;
 }
 
-#comments-section {
-  margin-top: 20px;
+.content h2 {
+  margin-top: 4rem;
 }
 
 .comment {
