--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -3,10 +3,14 @@
   padding: 1rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 150px;
 }
 
 .main img {
-  width: 8rem;
+  width: clamp(3rem, 10vw, 6rem);
   height: auto;
 }
 
@@ -17,6 +21,14 @@
   margin: unset;
 }
 
+.selected {
+  border-color: #007bff;
+}
+
 .main:hover {
+  background-color: #f1f1f1;
+}
+
+.main:active {
   background-color: #f1f1f1;
 }
