--- a/src/features/enem/Enem.module.css
+++ b/src/features/enem/Enem.module.css
@@ -1,46 +1,3 @@
-.container {
-  display: flex;
-  flex: 1;
-  width: 100%;
-}
-
-.sidebar {
-  width: 250px;
-  background-color: #007bff;
-  color: #fff;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.sidebar h2 {
-  margin-bottom: 20px;
-}
-
-.sidebar nav ul {
-  list-style: none;
-  padding: 0;
-  width: 100%;
-}
-
-.sidebar nav ul li {
-  margin-bottom: 10px;
-}
-
-.sidebar nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  display: block;
-  padding: 5px;
-}
-
-.sidebar nav ul li a:hover,
-.sidebar nav ul li a.active {
-  background-color: #0056b3;
-}
-
 .main_content {
   flex-grow: 1;
   background-color: #fff;
@@ -49,29 +6,9 @@
   flex-direction: column;
 }
 
-.header {
-  background-color: #f1f1f1;
-  padding: 10px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  border-bottom: 1px solid #ddd;
-}
-
-.header .user_info {
-  font-size: 16px;
-}
-
-.header .user_info span {
-  font-weight: bold;
-}
-
-.content {
-  padding: 20px;
-}
-
-.content h1 {
-  margin-bottom: 20px;
+.main_content h1 {
+  font-size: 1.5em;
+  margin-bottom: 1rem;
 }
 
 .sections {
@@ -108,65 +45,4 @@
 
 .section ul li a:hover {
   text-decoration: underline;
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .sidebar {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-  }
-
-  .sidebar nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  .sidebar nav ul li {
-    margin-bottom: 0;
-  }
-
-  .sidebar nav ul li a {
-    font-size: 16px;
-  }
-
-  .main-content {
-    padding: 10px;
-  }
-
-  .section {
-    flex: 1 1 100%;
-  }
-}
-
-@media (max-width: 480px) {
-  .header .user_info {
-    font-size: 14px;
-  }
-
-  .sidebar h2 {
-    font-size: 24px;
-  }
-
-  .sidebar nav ul li a {
-    font-size: 14px;
-  }
-
-  .main-content {
-    padding: 5px;
-  }
-
-  .content h1 {
-    font-size: 24px;
-  }
-
-  .section h2 {
-    font-size: 18px;
-  }
 }
